<resources>
    <string name="file_provider">com.soict.hoangviet.provider</string>
    <!--    <string name="app_name">Ngoại ngữ 24h</string>-->
    226981998041-iutk0tsccke1drjaqlpc2ung74qta131.apps.googleusercontent.com
    <string name="facebook_app_id">1192417877622499</string>
    <string name="fb_login_protocol_scheme">fb1192417877622499</string>
    <string name="google_services_api_key">AIzaSyDqb5zA6rS1Pf-PaAqHDeilZewyfxP_dgc</string>
    <!-- ERROR -->
    <string name="error">error</string>
    <string name="error_format">error format</string>
    <string name="error_try_later">Có lỗi xảy ra. Vui lòng thử lại!</string>
    <string name="error_disconnect">Hủy kết nối</string>
    <!-- DIALOG -->
    <string name="dialog_loading">Processing&#8230;</string>
    <!-- SIGN IN SCREEN -->
    <string name="tv_login_divide">------ Hoặc ------</string>
    <!-- HOME SCREEN -->
    <string name="tv_home_live">Phát trực tiếp bài giảng</string>
    <string name="tv_home_video">Tạo video bài giảng</string>
    <!-- VIDEO SCREEN -->
    <string name="tv_title_action_bar">Bài giảng đã tạo</string>
    <string name="dialog_syntax_login">Bạn cần phải đăng nhập để sử dụng chức năng này!</string>
    <!-- TEACHER SCREEN-->
    <string name="tv_teacher_page_number">Page %s</string>
    <string name="dialog_confirm_logout">Bạn có muốn đăng xuất tài khoản bây giờ?</string>
    <string name="splash_no_internet_connection_warning">Kết nối Internet để có trải nghiệm tốt nhất</string>
    <string name="teacher_min_time_record_error">Vui lòng tạo bài giảng không quá ngắn</string>
    <string name="teacher_no_save_error">Vui lòng lưu video bài giảng</string>
    <string name="teacher_save_success">Tạo bài giảng thành công</string>
    <string name="teacher_record_start">Bắt đầu bài giảng</string>
    <string name="teacher_save_pause">Tạm dừng bài giảng</string>
    <string name="teacher_save_resume">Tiếp tục bài giảng</string>
    <string name="teacher_save_question">Bạn có muốn tiếp tục tạo bài giảng sau khi lưu?</string>
    <string name="teacher_save_negative">Không</string>
    <string name="teacher_save_positive">Đồng ý</string>
    <!--    ListVideo-->
    <string name="list_video_no_result">Bạn chưa có video bài giảng nào</string>
    <!--    Setting-->
    <string name="setting_toolbar_title">Cài đặt</string>
    <string name="setting_row_notification">Cài đặt thông báo</string>
    <string name="setting_row_language">Cài đặt ngôn ngữ</string>
    <string name="setting_row_zoom">Cài đặt chế độ màn hình</string>
    <string name="setting_row_zoom_positive">Đồng ý</string>
    <string name="setting_row_zoom_negative">Hủy bỏ</string>
    <string name="setting_feature_developing">Tính năng đang được phát triển</string>
    <!--    Language-->
    <string name="language_toolbar_title">Cài đặt ngôn ngữ</string>
    <string-array name="setting_zoom_item">
        <item>Chế độ zoom màn hình</item>
        <item>Chế độ không zoom màn hình</item>
    </string-array>
    <string name="btn_login_facebook">Đăng nhập với Facebook</string>
    <string name="btn_login_google">Đăng nhập với Google</string>
    <string name="login_title">Đăng nhập</string>
    <string name="edt_sign_in_username">Tài khoản</string>
    <string name="edt_sign_in_password">Mật khẩu</string>
    <string name="tv_item_video_delete">Xóa</string>
    <string name="tv_item_video_edit">Cắt</string>
    <string name="tv_item_video_share">Chia sẻ</string>
    
<!--    Dialog video-->
    <string name="dialog_video_high">Độ phân giải cao</string>
    <string name="dialog_video_medium">Độ phân giải trung bình</string>
    <string name="dialog_video_low">Độ phân giải thấp</string>
    <string name="dialog_video_name">Tên bài giảng</string>
    <string name="start_recording">Bắt đầu</string>
    <string name="stop_recording">Kết thúc</string>
    <string name="high_definition">Độ phân giải cao</string>
    <string name="record_audio">Record Audio</string>
    <string name="show_notification">Hiển thị thông báo</string>
    <string name="standard_definition">Độ phân giải tiêu chuẩn</string>
    <string name="summary_video_resolution">Kích thước video</string>
    <string name="title_activity_settings">Cài đặt bài giảng</string>
    <string name="title_video_resolution">Độ phân giải</string>
    <string name="title_notification">Hiển thị thông báo</string>
    <string name="title_record_audio">"Ghi âm "</string>
    <string name="summary_notification">Thông báo nên được hiển thị</string>
    <string name="summary_record_audio">Âm thanh nên được ghi lại</string>
    <string name="teacher_notification_title">Đang quay bài giảng</string>
    <string name="teacher_notification_des">Kéo xuống để dừng quay bài giảng</string>
    <string name="title_audio">Cấu hình âm thanh</string>
    <string name="title_video">Cấu hình bài giảng</string>
    <string name="title_audio_source">Nguồn âm thanh</string>
    <string name="title_video_encoder">Mã hóa video</string>
    <string name="title_video_frame_rate">Tỉ lệ khung hình</string>
    <string name="title_video_output_format">Định dạng</string>
    <string name="title_more">Thêm</string>

    <string name="key_record_audio">key_record_audio</string>
    <string name="key_video_resolution">key_video_resolution</string>
    <string name="key_video_fps">key_video_fps</string>
    <string name="key_video_bitrate">key_video_bitrate</string>
    <string name="key_show_notification">key_show_notification</string>
    <string name="key_video_encoder">key_video_encoder</string>
    <string name="key_audio_source">key_audio_source</string>
    <string name="key_output_format">key_output_format</string>
    <string name="action_settings">Cài đặt bài giảng</string>
    <string name="teacher_dialog_network_title">Thông báo</string>
    <string name="teacher_dialog_network_message">Vui lòng kết nối Internet để có trải nghiệm tốt nhất</string>
    <string name="teacher_dialog_network_positive">Đồng ý</string>
    <string name="teacher_dialog_network_negative">Hủy</string>

<!--    Splash-->
    <string name="splash_button_title">Bắt đầu</string>

<!--    Home-->
    <string name="home_title">Kiến thức\nlà sức mạnh</string>
    <string name="home_youtube">Youtube</string>

<!--    Login-->
    <string name="login_logout_title">Đăng xuất</string>

</resources>
