<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_audio">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_record_audio"
            android:summary="@string/summary_record_audio"
            android:title="@string/title_record_audio" />

        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/title_audio_source"
            android:entries="@array/pref_audio_source"
            android:entryValues="@array/pref_audio_source_values"
            android:key="@string/key_audio_source"
            android:summary="Select microphone to be used"
            android:title="Audio Source" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Video Configuration">

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/title_video_encoder"
            android:entries="@array/pref_video_encoder"
            android:entryValues="@array/pref_video_resolution_values"
            android:key="@string/key_video_encoder"
            android:summary="Select video encoder"
            android:title="Video encoder" />

        <ListPreference
            android:defaultValue="4"
            android:dialogTitle="@string/title_video_resolution"
            android:entries="@array/pref_video_resolution"
            android:entryValues="@array/pref_video_resolution_values"
            android:key="@string/key_video_resolution"
            android:summary="@string/summary_video_resolution"
            android:title="@string/title_video_resolution" />

        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/title_video_frame_rate"
            android:entries="@array/pref_video_framerate"
            android:entryValues="@array/pref_video_resolution_values"
            android:key="@string/key_video_fps"
            android:summary="Set video frame rate"
            android:title="Frame rate" />

        <ListPreference
            android:defaultValue="5"
            android:dialogTitle="Bit-rate"
            android:entries="@array/pref_video_bitrate"
            android:entryValues="@array/pref_video_resolution_values"
            android:key="@string/key_video_bitrate"
            android:summary="Set video bit-rate"
            android:title="Bit-rate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_more">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_output_format"
            android:entryValues="@array/pref_video_resolution_values"
            android:key="@string/key_output_format"
            android:summary="Set output format"
            android:title="@string/title_video_output_format" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_show_notification"
            android:summary="@string/summary_notification"
            android:title="@string/title_notification"
            android:visibility="gone" />

    </PreferenceCategory>


</PreferenceScreen>