<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.soict.hoangviet.supportinglecturer.customview.BaseToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon_left="back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/setting_toolbar_title" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16_dp"
        app:cardCornerRadius="@dimen/radius_10_dp"
        app:cardElevation="@dimen/radius_6_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.soict.hoangviet.supportinglecturer.customview.BaseRowSetting
                android:id="@+id/row_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingName="@string/setting_row_notification" />

            <com.soict.hoangviet.supportinglecturer.customview.BaseRowSetting
                android:id="@+id/row_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingName="@string/setting_row_language" />

            <com.soict.hoangviet.supportinglecturer.customview.BaseRowSetting
                android:id="@+id/row_zoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:disableLine="true"
                app:settingName="@string/setting_row_zoom" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>